--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@vue/cli-plugin-e2e-cypress": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "cypress": "^9.7.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
